# fluxa

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
crates/fluxa-cli/: Cargo.toml
crates/fluxa-cli/src/: main.rs
crates/fluxa-core/: Cargo.toml
crates/fluxa-core/src/: lib.rs
crates/fluxa-core/src/entities/: task.rs
crates/fluxa-core/src/repositories/: task_repo.rs
crates/fluxa-core/src/services/: task_service.rs
crates/fluxa-scheduler/: Cargo.toml
crates/fluxa-scheduler/src/: main.rs
crates/fluxa-worker/: Cargo.toml
crates/fluxa-worker/src/: main.rs
proto/: Cargo.toml  build.rs  mini_cluster.proto
proto/src/: lib.rs
worker/: Cargo.toml
worker/src/: main.rs
