[package]
name = "mini-cluster-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.27"
mini-cluster-proto = { path = "../proto" }
ratatui = "0.28"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
uuid = { version = "1", features = ["v4"] }
